@@ -108,6 +108,30 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 	 * @dataProvider enum_field_provider
 	 */
 	public function test_enum_fields( $rest_key, $option_name, $original_valid_value, $new_valid_value, $new_invalid_value, $is_upe_enabled = true ) {
+		WC_Stripe::get_instance()->account = $this->getMockBuilder( 'WC_Stripe_Account' )
+			->disableOriginalConstructor()
+			->setMethods(
+				[
+					'get_cached_account_data',
+				]
+			)
+			->getMock();
+		WC_Stripe::get_instance()->account->method( 'get_cached_account_data' )->willReturn(
+			[
+				'capabilities' => [
+					'bancontact_payments' => 'active',
+					'card_payments'       => 'active',
+					'eps_payments'        => 'active',
+					'giropay_payments'           => 'active',
+					'ideal_payments'             => 'active',
+					'p24_payments'               => 'active',
+					'sepa_debit_payments'        => 'active',
+					'boleto_payments'            => 'active',
+					'oxxo_payments'              => 'active',
+					'link_payments'              => 'active',
+				],
+			]
+		);
 		// It returns option value under expected key with HTTP code 200.
 		$this->get_gateway()->update_option( $option_name, $original_valid_value );
 		$response = $this->rest_get_settings();
@@ -204,12 +228,24 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 
 		WC_Stripe::get_instance()->account->method( 'get_cached_account_data' )->willReturn(
 			[
-				'country' => 'US',
+				'country'      => 'US',
+				'capabilities' => [
+					'bancontact_payments'        => 'active',
+					'card_payments'              => 'active',
+					'eps_payments'               => 'active',
+					'giropay_payments'           => 'active',
+					'ideal_payments'             => 'active',
+					'p24_payments'               => 'active',
+					'sepa_debit_payments'        => 'active',
+					'boleto_payments'            => 'active',
+					'oxxo_payments'              => 'active',
+					'link_payments'              => 'active',
+				],
 			]
 		);
 		$response = $this->rest_get_settings();
 
-		$expected_method_ids = array_keys( $this->get_gateway()->payment_methods );
+		$expected_method_ids   = array_keys( $this->get_gateway()->payment_methods );
 		$expected_method_ids[] = 'multibanco';
 
 		$available_method_ids = $response->get_data()['available_payment_method_ids'];
@@ -233,6 +269,18 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 		WC_Stripe::get_instance()->account->method( 'get_cached_account_data' )->willReturn(
 			[
 				'country' => 'US',
+				'capabilities' => [
+					'bancontact_payments'        => 'active',
+					'card_payments'              => 'active',
+					'eps_payments'               => 'active',
+					'giropay_payments'           => 'active',
+					'ideal_payments'             => 'active',
+					'p24_payments'               => 'active',
+					'sepa_debit_payments'        => 'active',
+					'boleto_payments'            => 'active',
+					'oxxo_payments'              => 'active',
+					'link_payments'              => 'active',
+				],
 			]
 		);
 		$response = $this->rest_get_settings();
@@ -241,7 +289,7 @@ class WC_REST_Stripe_Settings_Controller_Test extends WP_UnitTestCase {
 
 		unset( $expected_methods['link'] );
 
-		$expected_method_ids = array_keys( $expected_methods );
+		$expected_method_ids   = array_keys( $expected_methods );
 		$expected_method_ids[] = 'multibanco';
 
 		$ordered_method_ids = $response->get_data()['ordered_payment_method_ids'];
